# 3lc-ultralytics

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  compare_files.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  docker-ci.yaml
docker/: Dockerfile  docker-entrypoint.sh  run-tests-in-docker.sh
examples/: README.md
examples/classify/: collect.py  train.py
examples/detect/: collect.py  train.py
examples/segment/: collect.py  train.py
src/tlc_ultralytics/: __init__.py  constants.py  overrides.py  settings.py
src/tlc_ultralytics/classify/: dataset.py  trainer.py  utils.py  validator.py
src/tlc_ultralytics/detect/: dataset.py  loss.py  trainer.py  utils.py  validator.py
src/tlc_ultralytics/engine/: dataset.py  model.py  trainer.py  utils.py  validator.py
src/tlc_ultralytics/segment/: trainer.py  utils.py  validator.py
src/tlc_ultralytics/utils/: __init__.py  check_version.py  dataset.py  embeddings.py  sampler.py
tests/: conftest.py  dataset_determinism.py  random_tracker.py  test_tlc_ultralytics.py  train_3lc.py  train_ultralytics.py  training_script.py
tmp/: 3lc_random_calls.json  ultralytics_random_calls.json
