[project]
name = "3lc-ultralytics"
version = "0.0.0"
description = "3LC integration with Ultralytics YOLO"
readme = "README.md"
authors = [
    {name = "3LC", email = "support@3lc.ai"},
]
requires-python = ">=3.9"
dependencies = [
    "3lc>=2.13.1",
    "pacmap>=0.8.0",
    "ultralytics==8.3.146",
]

[build]
includes = [
    "src/tlc_ultralytics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
core-metadata-version = "2.4"
packages = [
    "src/tlc_ultralytics",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.11",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
"3lc" = [
    { path = "../tlc-monorepo", editable=true },
]
